# ostival-desktop

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  SECURITY.md
.github/workflows/: cmake-multi-platform.yml
docs/: OstivalDoc.tex
docs/chapters/: 01preface.tex  02purpose.tex  03vision.tex  04target.tex  05ack.tex  20getstarted.tex  30cli.tex
src/: CentralLogger.cpp  CentralLogger.h  CentralWidget.cpp  CentralWidget.h  DrawSchematic.cpp  DrawSchematic.h  FileMenuBuilder.cpp  FileMenuBuilder.h  InitialDialog.cpp  InitialDialog.h  LeftDockBuilder.cpp  LeftDockBuilder.h  MainGUIWindow.cpp  MainGUIWindow.h  OstivalMain.cpp  ProjectFileHandler.cpp  ProjectFileHandler.h  RightDockBuilder.cpp  RightDockBuilder.h  SettingsDialog.cpp  SettingsDialog.h  StatusBarBuilder.cpp  StatusBarBuilder.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  SyntaxHighlighterPython.cpp  SyntaxHighlighterPython.h  TempFiles.cpp  TempFiles.h  TerminalDialog.cpp  TerminalDialog.h  ToolBarBuilder.cpp  ToolBarBuilder.h  ToolCommunicator.cpp  ToolCommunicator.h  VcdViewer.cpp  VcdViewer.h  app_resources.qrc  cliHandler.cpp  cliHandler.h  (+2 more)
tests/: ostival_cli_test.py
